# dawnoftime_1.69r

./: README.md  dawnlogs.txt  gameset.txt  gameset.txt.giobak  resolver
area/: dawn.are
data/: laston.txt
help/: colour.txt
imc/: imc.config
notes/: snotes.not
src/: act_comm.cpp  act_ente.cpp  act_info.cpp  act_move.cpp  act_obj.cpp  act_wiz.cpp  act_wiz2.cpp  aedit.cpp  aedit.h  affects.cpp  alias.cpp  areas.cpp  areas.h  autostat.cpp  ban.cpp  ban.h  banedit.cpp  banedit.h  base64.cpp  bit.cpp  bitflags.h  cedit.cpp  cedit.h  channels.cpp  channels.h  chardata.cpp  chardata.h  clan.cpp  clan.h  clanedit.cpp  clanedit.h  class.cpp  colour.cpp  colour.h  com_time.cpp  comedit.cpp  comedit.h  comm.cpp  comm.h  config.h  (+211 more)
src/configure/: aclocal.m4  config.hin  config.status  configure  configure.in  makefile.in  makefile.original
src/docs/: licenses.txt
src/extras/: bootdawn.pl  botcode.txt  cvsserve.cpp  dos2unix.c  resolver.cpp  resolver.h
