dnl Process this file with autoconf to produce a configure script.
AC_INIT(../dawn.h)
AC_SUBST(ZLIBS)
AC_CONFIG_HEADER(../config.h:config.hin)

AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/types.h sys/time.h unistd.h sys/socket.h)
AC_CHECK_HEADERS(sys/param.h sys/sysctl.h sys/utsname.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_DAWN_CHECK_TYPE(socklen_t, int)
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday select socket strstr)

dnl Test for libz
AC_CHECK_LIB(z, deflate, 
	[AC_CHECK_HEADER([zlib.h], [AC_DEFINE(HAVE_ZLIB)] [ZLIBS="-lz"] )] )


CHECK_BSD_MAKE()
CHECK_GNU_MAKE()

AC_OUTPUT(../makefile:makefile.in)

